# silo

./: .gitignore  Cargo.toml  README.md
silo/: Cargo.toml
silo-core/: Cargo.toml
silo-core/src/: lib.rs  models.rs  service.rs
silo-core/src/log/: logger.rs
silo-core/src/logging/: log.rs  mod.rs
silo-core/src/models/: group.rs  job.rs  job_result.rs  node.rs  subject.rs  subject_trait.rs
silo-db/: Cargo.toml
silo-db/src/: actor.rs  config.rs  connection.rs  db_utils.rs  errors.rs  lib.rs  models.rs  service.rs
silo-db/src/migrations/: V00001__subject_trait.rs  V00002__group.rs  V00003__subject.rs  V00004__subject_trait.rs  V00005__job.rs  V00006__job_result.rs  mod.rs
silo-http/: Cargo.toml
silo-http/src/: api.rs  lib.rs
silo-runner/: Cargo.toml
silo-runner/src/: build.rs  lib.rs  python.rs
silo-transform/: Cargo.toml
silo-transform/examples/: matrix_tsv.rs
silo-transform/src/: lib.rs  matrix.rs
silo/src/: main.rs
