[package]
name = "silo-db"
version = "0.1.0"
authors = ["Tyler Lafayette <tylerlafayette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidizer = "0.2.1"
silo-core = { path = "../silo-core" }
async-trait = "0.1.7"
tokio = { version = "0.2", features = ["full"] }
refinery = "0.3"
actix = "0.10"
