[package]
name = "silo-db"
version = "0.1.0"
authors = ["Tyler Lafayette <tylerlafayette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidizer =  { git = "https://github.com/TylerLafayette/oxidizer", branch = "main" }
serde = "1.0.118"
silo-core = { path = "../silo-core" }
async-trait = "0.1.7"
tokio = { version = "0.2", features = ["full"] }
refinery = { git = "https://github.com/TylerLafayette/refinery", branch = "release-0.4" } 
actix = "0.10"
