[package]
name = "silo-http"
version = "0.1.0"
authors = ["Tyler Lafayette <tylerlafayette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
serde = "1.0.118"
futures = "0.3.8"
silo-core = { path = "../silo-core" }
silo-db = { path = "../silo-db" }
