[package]
name = "silo-http"
version = "0.1.0"
authors = ["Tyler Lafayette <tylerlafayette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = "1.0.118"
futures = "0.3.8"
tokio = { version = "0.2", features = ["full"] }
silo-core = { path = "../silo-core" }
silo-transform = { path = "../silo-transform" }
silo-db = { path = "../silo-db" }
