[package]
name = "silo"
version = "0.1.0"
authors = ["Tyler Lafayette <tylerlafayette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silo-core = { path = "../silo-core" }
silo-db = { path = "../silo-db" }
actix = "0.10"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
